Actions
Bug #13125
closedlibc: unchecked function return 'nvfree'
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
smatch error:
/code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../port/gen/attrat.c:313 libc_nvlist_free() error: unchecked function return 'nvfree'
Testing done: tested with dis(1), no diffs
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ce87906fe0d027df0327d283b3423eaf1d3cdda5
commit ce87906fe0d027df0327d283b3423eaf1d3cdda5 Author: Toomas Soome <tsoome@me.com> Date: 2020-09-21T20:03:23.000Z 13125 libc: unchecked function return 'nvfree' Reviewed by: Marco van Wieringen <mvw@planets.elm.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions